public/style.css
/* Other */

* {
  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
}

html {
  -webkit-font-smoothing: antialiased;
}

html, body {
  height: 100%;
  margin: 0;
  padding: 0;
}

textarea {
  width: 100%;
  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
  box-sizing: border-box;         /* Opera/IE 8+ */
}

.shadow {
  box-shadow: 0px 0px 8px 0px rgba(136,136,136,1)
}


/* Login Page */

#login-page {
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 100;
  background-color: #000;
}

#login-page-title {
  font-size: 200%;
  color: white;
}

#login-page-error {
  font-size: 150%;
  color: red;
}

#login-page .form {
  height: 100px;
  margin-top: -100px;
  position: absolute;

  text-align: center;
  top: 50%;
  width: 100%;
}

#login-page .form #input-username {
  background-color: transparent;
  border: none;
  border-bottom: 2px solid #fff;
  outline: none;
  padding-bottom: 15px;
  text-align: center;
  width: 400px;
}


#login-page #input-username {
  font-size: 200%;
  letter-spacing: 3px;
  color: #fff;
  font-weight: 100;
}


/* Game Page */

#game-page {
  display: none;
  width: 100%;
  height: 100%;
  z-index: 1;
  background-color: #fefefe;
}

#game-area {
  position: relative;
  width: 100%;
  margin-top: 2%;
  padding-left: 5%;
  padding-right: 5%;
}

#game-area > div {
  display: none;
  position: absolute;
  width: 100%;
  top: 2%;
  left: 0;
}

#input-game {
  border: 0;
}

#nav-timer-loading {
  display: none;
}

.memecard {
  margin-bottom: 20px;
}

.memecard .card-title{
  color: black;
}

.memereacts table {
  width: 100%;
  height: 100%;
  border-collapse: collapse;
  border-spacing: 0;
  text-align: center;
}

.memereacts-btn {
  font-size: 200%;
  text-align: center;
}

.memereacts-btn:hover {
  background-color: #eee;
}

.memereacts-btn.unclickable {
  pointer-events: none;
  cursor: default;
}

